--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 # Site
 title: Hexo
 subtitle: ''
-description: ''
+description: '软件开发工程师'
 keywords:
 author: norminal
-language: en
+language: zh-CN
 timezone: ''
 
 # URL
