--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: norminal的博客
 subtitle: ''
 description: '软件开发工程师'
 keywords:
